--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 		<div class="banner">
 			<img src="banner-jogo.png">
 		</div>
+		<div class="regras">
+			<h2>REGRAS</h2>
+			<img src="tesoura_jogador.png" class="regra">
+			Vence
+			<img src="papel_jogador.png" class="regra"><br>
+			<img src="papel_jogador.png" class="regra">
+			Vence
+			<img src="pedra_jogador.png" class="regra"><br>
+			<img src="pedra_jogador.png" class="regra">
+			Vence
+			<img src="tesoura_jogador.png" class="regra">
+		</div>
 		<div class="console">
 			<div class="game">
 				<h1>Escolha a Modalidade</h1>
