--- a/page-5.html
+++ b/page-5.html
@@ -9,6 +9,18 @@
 		<div class="banner">
 			<a href="index.html"><img src="banner-jogo.png"></a>
 		</div>
+		<div class="regras">
+			<h2>REGRAS</h2>
+			<img src="tesoura_jogador.png" class="regra">
+			Vence
+			<img src="papel_jogador.png" class="regra"><br>
+			<img src="papel_jogador.png" class="regra">
+			Vence
+			<img src="pedra_jogador.png" class="regra"><br>
+			<img src="pedra_jogador.png" class="regra">
+			Vence
+			<img src="tesoura_jogador.png" class="regra">
+		</div>
 		<div class="console">
 			<div class="game">
 				<div>
